# spaceload

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: codeql.yml
ctx/adapters/aerospace/: __init__.py  adapter.py
ctx/adapters/browser/: __init__.py  arc.py  base.py  chrome.py  firefox.py  registry.py  safari.py
ctx/adapters/ide/: cursor.py  vscode.py
ctx/adapters/terminal/: iterm2.py
ctx/adapters/vpn/: __init__.py  base.py  cisco.py  mullvad.py  openvpn.py  registry.py  tailscale.py  tunnelblick.py  wireguard.py
ctx/adapters/wm/: __init__.py  aerospace.py  base.py  registry.py  yabai.py
ctx/cli/: main.py
ctx/daemon/: __init__.py  server.py
ctx/replayer/: replayer.py
ctx/shell/: __init__.py  hooks.py
homebrew-tap/Formula/: spaceload.rb
loadout/: __init__.py
loadout/adapters/: __init__.py
loadout/adapters/aerospace/: __init__.py  adapter.py
loadout/adapters/browser/: __init__.py  arc.py  chrome.py  firefox.py  registry.py  safari.py
loadout/adapters/ide/: __init__.py  base.py  cursor.py  registry.py  vscode.py  zed.py
loadout/adapters/terminal/: __init__.py  base.py  iterm2.py  kitty.py  registry.py  terminal_app.py  warp.py
loadout/adapters/vpn/: __init__.py  cisco.py  mullvad.py  openvpn.py  registry.py  tailscale.py  tunnelblick.py  wireguard.py
loadout/adapters/wm/: __init__.py  aerospace.py  app_names.py  registry.py  yabai.py
loadout/cli/: __init__.py  main.py
loadout/daemon/: server.py
loadout/replayer/: __init__.py  replayer.py
loadout/shell/: hooks.py
loadout/store/: __init__.py  workspace_store.py
spaceload/cli/: main.py
spaceload/daemon/: server.py
spaceload/diff/: __init__.py  differ.py  formatter.py
spaceload/share/: exporter.py  token_resolver.py
spaceload/snapshot/: __init__.py  capturer.py
spaceload/tui/: __init__.py  event_poller.py  recording_view.py  renderer.py  summary_view.py
tests/: __init__.py  test_aerospace_adapter.py  test_browser_adapters.py  test_browser_integration.py  test_cli.py  test_diff_formatter.py  test_differ.py  test_generic_app_tracking.py  test_ide_adapters.py  test_ide_integration.py  test_integration.py  test_share.py  test_shell_hooks.py  test_snapshot_capturer.py  test_terminal_adapters.py  test_terminal_integration.py  test_vpn_adapters.py  test_vpn_integration.py  test_wm_adapters.py  test_workspace_store.py
tests/tui/: test_event_poller.py  test_recording_view.py  test_renderer.py  test_summary_view.py
