[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceload"
version = "0.1.0"
description = "Workspace Context Switcher — record and replay developer workspace setups"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "tomjosetj31", email = "" },
]
keywords = ["workspace", "developer-tools", "macos", "productivity", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/tomjosetj31/spaceload"
Repository = "https://github.com/tomjosetj31/spaceload"
"Bug Tracker" = "https://github.com/tomjosetj31/spaceload/issues"
Changelog = "https://github.com/tomjosetj31/spaceload/blob/master/CHANGELOG.md"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.scripts]
spaceload = "spaceload.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.1",
]
firefox = [
    "lz4>=4.0",  # Required for reading Firefox session files
]
all = [
    "lz4>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spaceload*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
